fix entities