@@ -8,7 +8,7 @@ public class Relationship {
     private Long id;
     private LocalDate createdAtUTC;
     private String status;
-    private List <Detail> details;
+    private List<Detail> details;
 
     public Relationship() {
     }
@@ -51,67 +51,83 @@ public class Relationship {
     public void setStatus(String status) {
         this.status = status;
     }
+
     @Override
-    public boolean equals(Object o) {
-        if (this == o) {
+    public boolean equals(Object obj) {
+        if (this == obj) {
             return true;
         }
-        if (o == null) {
+        if (obj == null) {
             return false;
         }
-        if (getClass() != o.getClass()) {
+        if (getClass() != obj.getClass()) {
             return false;
         }
-        Relationship relationship = (Relationship) o;
+        Relationship aThat = (Relationship) obj;
 
         if (getId() == null) {
-            if (relationship.getId() != null) {
+            if (aThat.getId() != null) {
                 return false;
             }
-        } else if (!getId().equals(relationship.getId())) {
+        } else if (!getId().equals(aThat.getId())) {
             return false;
         }
 
         if (getCreatedAtUTC() == null) {
-            if (relationship.getCreatedAtUTC() != null) {
+            if (aThat.getCreatedAtUTC() != null) {
                 return false;
             }
-        } else if (!getCreatedAtUTC().equals(relationship.getCreatedAtUTC())) {
+        } else if (!getCreatedAtUTC().equals(aThat.getCreatedAtUTC())) {
             return false;
         }
 
-        for (int i=0; i < getDetails().size(); i++) {
-            Detail detail= getDetails().get(i);
-            if (detail.getId()==null){
-                if (relationship.getDetails().get(i).getId()!=null){
+        if (getDetails() == null && aThat.getDetails() != null) {
+            return false;
+        } else if (aThat.getDetails() == null && getDetails() != null) {
+            return false;
+        } else if (aThat.getDetails() != null && getDetails() != null) {
+            for (int i = 0; i < getDetails().size(); i++) {
+                if (getDetails().size() != aThat.getDetails().size()) {
                     return false;
                 }
-            } else if(!detail.getId().equals(relationship.getDetails().get(i).getId())){
-                return false;
+                Detail detail = getDetails().get(i);
+                if (detail.getId() == null) {
+                    if (aThat.getDetails().get(i).getId() != null) {
+                        return false;
+                    }
+                } else if (!detail.getId().equals(aThat.getDetails().get(i).getId())) {
+                    return false;
+                }
             }
         }
-
-        return getStatus() == null ? relationship.getStatus() == null : getStatus().equals(relationship.getStatus());
+        return getStatus() == null ? aThat.getStatus() == null : getStatus().equals(aThat.getStatus());
     }
 
     @Override
     public int hashCode() {
         int result = 31;
-        result =  31 * result + (getId() != null ? getId().hashCode() : 0);
-        result = 31 * result + (getCreatedAtUTC() != null ? getCreatedAtUTC().hashCode() : 0);
-        result = 31 * result + (getStatus() != null ? getStatus().hashCode() : 0);
-        for (int i=0; i < getDetails().size(); i++) {
-            Detail detail =getDetails().get(i);
-            result = 31 * result + (detail.getId() != null ? detail.getId().hashCode() : 0);
+        int prime = 31;
+        result = prime * result + (getId() != null ? getId().hashCode() : 0);
+        result = prime * result + (getCreatedAtUTC() != null ? getCreatedAtUTC().hashCode() : 0);
+        result = prime * result + (getStatus() != null ? getStatus().hashCode() : 0);
+        if (getDetails() != null) {
+            for (int i = 0; i < getDetails().size(); i++) {
+                Detail detail = getDetails().get(i);
+                result = prime * result + (detail.getId() != null ? detail.getId().hashCode() : 0);
+            }
         }
         return result;
     }
 
-    public String toString()
-    {
-        return new StringBuilder(getClass().getSimpleName()).append(" { Id = ").append(getId())
-                .append(", CreatedAtUTC = ").append(getCreatedAtUTC()).append(", Status = ").append(getStatus())
-                .append("}, {Details = ").append(getDetails().stream().map(detail-> detail.getId()).collect(Collectors.toList()))
-                .append("}").toString();
+    public String toString() {
+        return new StringBuilder(getClass().getSimpleName())
+                .append(" { id = ").append(getId())
+                .append(", createdAtUTC = ").append(getCreatedAtUTC())
+                .append(", status = ").append(getStatus())
+                .append("}, {Details id = ").append(getDetails().stream()
+                        .map(Detail::getId)
+                        .toList())
+                .append("}")
+                .toString();
     }
 }
